--- a/wp-content/themes/rosachina/style.css
+++ b/wp-content/themes/rosachina/style.css
@@ -152,6 +152,25 @@ h1, h2, h3, h4, h5, h6{
     width: 100%;
     text-align: center;
 }
+/*--------------------------------------------------------------
+# Video
+--------------------------------------------------------------*/
+#video{
+    width: 100%;
+}
+
+@media screen and (max-width: 900px){
+    #video{
+        display: none;
+    }
+}
+
+.logo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 
 /*--------------------------------------------------------------
 # Nav
@@ -159,7 +178,10 @@ h1, h2, h3, h4, h5, h6{
 .caja-marca{
     background: #000;
     margin-bottom: 40px;
-    padding: 50px 0;
+    height: 500px;
+    overflow: hidden;
+    position: relative;
+    width:100%;
 }
 
 .site-branding{
@@ -182,7 +204,7 @@ h1, h2, h3, h4, h5, h6{
 }
 	.main-navigation{
 		overflow: hidden;
-        width: 515px;
+        width: 541px;
         margin: 0 auto;
 	}
 	.main-navigation ul{
@@ -190,7 +212,7 @@ h1, h2, h3, h4, h5, h6{
 	.main-navigation ul li{
 		float: left;
 		position: relative;
-		padding: 0 5px;
+		padding: 0 8px;
 	}
 	.main-navigation ul li a{
 		color: #000;
@@ -202,7 +224,7 @@ h1, h2, h3, h4, h5, h6{
     @media screen and ( min-width: 900px ){
         .main-navigation ul li.cosito a::after{
             content: '-';
-            padding-left: 7px;
+            padding-left: 17px;
         }
     }
 	.main-navigation ul li span{
@@ -226,6 +248,10 @@ h1, h2, h3, h4, h5, h6{
     .nav-redes a{
         float: right;
         padding-left: 25px;
+    }
+
+    .contenido-contacto p{
+        text-align: center;
     }
 
     /*--------------------------------------------------------------
@@ -310,7 +336,7 @@ h1, h2, h3, h4, h5, h6{
 
     .post-portada .imagen{
         width: 100%;
-        height: 350px;
+        height: 300px;
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -617,8 +643,8 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
       text-transform: uppercase;
     }
 
-    .caja-pregunta.escritores, .caja-pregunta.discos{
-        padding: 0 28%;
+    .caja-pregunta.escritores, .caja-pregunta.discos h2{
+        padding: 0 32%;
     }
 
     /*.caja-conjunto h2:before{
@@ -662,7 +688,6 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
     font-family: 'Raleway', sans-serif;
     letter-spacing: 1px;
     color: #000;
-    text-align: justify;
 }
 
 .caja-aclaracion p{
@@ -842,51 +867,32 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
     letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #ffffff;
-  font-family: 'brandon_textlight', sans-serif;
+  color: #000;
+  font-family: 'Raleway', sans-serif;
   font-size: 15px;
   letter-spacing: 2px;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: #ffffff;
-  font-family: 'brandon_textlight', sans-serif;
+    color: #000;
+    font-family: 'Raleway', sans-serif;
   font-size: 15px;
   letter-spacing: 2px;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: #ffffff;
-  font-family: 'brandon_textlight', sans-serif;
+    color: #000;
+    font-family: 'Raleway', sans-serif;
   font-size: 15px;
   letter-spacing: 2px;
 }
 :-moz-placeholder { /* Firefox 18- */
-  color: #ffffff;
-  font-family: 'brandon_textlight', sans-serif;
+    color: #000;
+    font-family: 'Raleway', sans-serif;;
   font-size: 15px;
   letter-spacing: 2px;
-}
-
-.mail-rosachina{
-    font-family: 'brandon_textmedium', sans-serif;
-    text-align: center;
-    display: block;
-    color: #ffffff;
-    margin-top: 85px;
-    font-size: 24px;
-    background-image: url('img/img-mail.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    padding: 7px 0;
-}
-
-.img-contacto-cuadraditos{
-    position: absolute;
-    z-index: -1;
-    right: 0;
-    top: 52%;
 }
 
 .content-contacto{
@@ -1049,13 +1055,19 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
 
     /*Entrevista*/
     .caja-contenido p{
-        padding: 0 24%;
+        padding: 0 26%;
     }
     .caja-texto-nota h1 {
-        padding: 90px 24%;
+        padding: 90px 26%;
     }
     .caja-contenido h2, .caja-contenido h3, .caja-contenido h4 {
-        padding: 90px 24%;
+        padding: 90px 26%;
+    }
+    .caja-aclaracion p{
+        padding: 0 26%;
+    }
+    .caja-pregunta.escritores, .caja-pregunta.discos h2{
+        padding: 0 26%;
     }
 
   .site-header {
@@ -1066,7 +1078,7 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
     padding: 20px 10% 40px;
   }
   .caja-aclaracion {
-    padding: 40px 11% 50px;
+    padding: 40px 0 50px;
   }
   .comments-area {
     padding: 50px 11%;
@@ -1092,13 +1104,19 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
 
 @media screen and ( max-width: 1500px){
     .caja-contenido p{
-        padding: 0 17%;
+        padding: 0 22%;
     }
     .caja-texto-nota h1 {
-        padding: 90px 17%;
+        padding: 90px 22%;
     }
     .caja-contenido h2, .caja-contenido h3, .caja-contenido h4 {
-        padding: 90px 17%;
+        padding: 90px 22%;
+    }
+    .caja-aclaracion p{
+        padding: 0 22%;
+    }
+    .caja-pregunta.escritores, .caja-pregunta.discos h2{
+        padding: 0 22%;
     }
   /*Nav*/
   .site-branding {
@@ -1108,11 +1126,7 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
     width: 1100px;
   }
 
-  /*Portada Entrevista*/
-  .post-portada{
-     width: 44%;
-     margin: 0 3% 70px;
-  }
+
 
   /*Contacto*/
   .contenido-contacto form {
@@ -1129,18 +1143,35 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
     width: 45%;
   }
 
+  .post-portada {
+      width: 29.3%;
+      margin: 0 2% 70px;
+    }
+    .post-portada .imagen {
+        height: 200px;
+    }
+
 
 }
 
 @media screen and (max-width: 1300px){
+    .caja-carousel-linea-tiempo {
+        padding: 5% 10% 0;
+    }
     .caja-contenido p{
-        padding: 0 13%;
+        padding: 0 18%;
     }
     .caja-texto-nota h1 {
-        padding: 90px 13%;
+        padding: 90px 18%;
     }
     .caja-contenido h2, .caja-contenido h3, .caja-contenido h4 {
-        padding: 90px 13%;
+        padding: 90px 18%;
+    }
+    .caja-aclaracion p{
+        padding: 0 18%;
+    }
+    .caja-pregunta.escritores, .caja-pregunta.discos h2{
+        padding: 0 18%;
     }
   /*Footer*/
   .footer-redes {
@@ -1149,17 +1180,37 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
   .nav-footer .menu-menu-1-container ul {
     margin: 20px 0 30px 4%;
   }
+  .caja-marca {
+      height: 400px;
+  }
 }
 
 @media screen and (max-width: 1200px){
+    /*Portada Entrevista*/
+    .post-portada{
+       width: 44%;
+       margin: 0 3% 70px;
+    }
+    .post-portada .imagen {
+      height: 250px;
+    }
+    .frase-home {
+        margin: 80px auto 100px;
+    }
     .caja-contenido p{
-        padding: 0 7%;
+        padding: 0 12%;
     }
     .caja-texto-nota h1 {
-        padding: 90px 7%;
+        padding: 90px 12%;
     }
     .caja-contenido h2, .caja-contenido h3, .caja-contenido h4 {
-        padding: 90px 7%;
+        padding: 90px 12%;
+    }
+    .caja-aclaracion p{
+        padding: 0 12%;
+    }
+    .caja-pregunta.escritores, .caja-pregunta.discos h2{
+        padding: 0 12%;
     }
   /*Nav*/
   .site-branding img {
@@ -1189,10 +1240,12 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
 
 
 
+
 }
 
 
 @media screen and ( max-width: 1000px){
+
   /*Nav*/
   .logo-desktop{
     display: none;
@@ -1233,12 +1286,29 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
     .caja-contenido h2, .caja-contenido h3, .caja-contenido h4 {
         padding: 90px 40px;
     }
+    .caja-aclaracion p{
+        padding: 0 40px;
+    }
+    .caja-pregunta.escritores, .caja-pregunta.discos h2{
+        padding: 0 40px;
+    }
+
+    .frase-home {
+        margin: 80px auto 0px;
+    }
+    .cajita-texto img {
+        width: 250px;
+    }
 
   /*Nav mobile*/
   .btn-menu-mobile{
     display: inline-block !important;
     float: right;
     margin-right: 30px;
+    position: absolute;
+    top: 25px;
+    right: 0px;
+    z-index: 9999999999999;
   }
   .site-header {
       padding: 30px 0;
@@ -1266,7 +1336,7 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
 
   /*Entrevista*/
   .caja-carousel-linea-tiempo {
-    padding: 70px 22% 20px;
+    padding: 70px 80px 20px;
   }
   .encabezado-nota {
     padding: 0 7%;
@@ -1281,11 +1351,11 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
 
   /*Linea tiempo*/
   .item-contenido h2 {
-    font-size: 20px;
+    font-size: 40px;
   }
   .item-contenido p {
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 28px;
+    line-height: 32px;
   }
 
   /*Cosas*/
@@ -1301,7 +1371,7 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
     padding: 20px 5% 40px;
   }
   .caja-aclaracion {
-    padding: 40px 6% 50px;
+    padding: 40px 0 50px;
   }
   .comments-area {
     padding: 50px 6%;
@@ -1323,6 +1393,7 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
   .img-contacto-cuadraditos {
     display: none;
   }
+
 
 
   /*Portada home*/
@@ -1349,6 +1420,9 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
 }
 
 @media screen and ( max-width: 700px ){
+    .caja-carousel-linea-tiempo {
+        padding: 70px 45px 0px;
+    }
     /*Entrevista*/
     .caja-contenido p{
         padding: 0 25px;
@@ -1362,6 +1436,12 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
         padding: 20px 30px;
         font-size: 35px;
         line-height: 55px;
+    }
+    .caja-aclaracion p{
+        padding: 0 25px;
+    }
+    .caja-pregunta.escritores, .caja-pregunta.discos h2{
+        padding: 0 30px;
     }
     .encabezado-img {
         margin-bottom: 10px;
@@ -1450,6 +1530,9 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
         font-size: 25px;
         line-height: 40px;
     }
+    .caja-aclaracion p{
+        padding: 0 30px;
+    }
 
   .post-portada h2, .caja-texto-nota h2 {
     font-size: 33px;
@@ -1533,7 +1616,7 @@ img.aligncenter, img.alignnone, img.alignleft, img.alignright{
   .frase-home{
       width: 720px;
       display: block;
-      margin: 0 auto;
+      margin: 120px auto 200px;
   }
 
   .frase-home span{
